--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-osc": "^8.0.11"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node test-client.js"
   }
 }
