--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
-    "ws": "^8.13.0",
-    "node-osc": "^8.0.11"
+    "node-fetch": "^2.7.0",
+    "node-osc": "^8.0.11",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "start": "node server.js",
