--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "node-fetch": "^2.7.0",
     "node-osc": "^8.0.11",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "yaml": "^2.8.0"
   },
   "scripts": {
     "start": "node server.js",
