--- a/config.yml
+++ b/config.yml
@@ -2,9 +2,12 @@ relay:
   host: 57.128.188.155
   port: 4953
   maxRetries: 5
+  connection:
+    retries: 3 // -1 for endless
+    retryDelay: 5000  
   user:
     name: Chloe
-    id: 7yrqturr
+    id: 15000
 osc:
   local:
     sendPort: 9000
@@ -13,31 +16,62 @@ osc:
     ip: 127.0.0.1
 filters:
   blacklist:
-    - /avatar/parameters/VelocityX
-    - /avatar/parameters/VelocityY
-    - /avatar/parameters/VelocityZ
-    - /avatar/parameters/InStation
-    - /monitoring/.*
-    - /avatar/parameters/VF54_SyncDataNum
-    - /avatar/parameters/VF54_SyncPointer
-    - /avatar/parameters/Voice
-    - /avatar/parameters/VFH/.*
-    - /avatar/parameters/0_Angle
-    - /avatar/parameters/VF70_TC_current_trackingEyes
-    - /avatar/parameters/VF70_TC_current_trackingRightFoot
-    - /avatar/parameters/VF70_TC_current_trackingLeftFoot
-    - /avatar/parameters/VF70_TC_current_trackingMouth
-    - /avatar/parameters/VF70_TC_current_trackingRightFingers
-    - /avatar/parameters/VF70_TC_current_trackingLeftFingers
-    - /avatar/parameters/VF70_TC_current_trackingHip
-    - /avatar/parameters/VF70_TC_current_trackingRightHand
-    - /avatar/parameters/VF70_TC_current_trackingLeftHand
-    - /avatar/parameters/VF70_TC_current_trackingHead
-    - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingRightFoot
-    - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingLeftFoot
-    - /avatar/parameters/Go/Crouch
-    - /avatar/parameters/Go/Mirror
-    - /avatar/parameters/VelocityMagnitude
-    - /avatar/parameters/AngularY
-    - /avatar/parameters/Go/Jump
-    - /avatar/parameters/Grounded
+    console:  # Messages that won't be logged but will be transmitted
+      - /avatar/parameters/VelocityX
+      - /avatar/parameters/VelocityY
+      - /avatar/parameters/VelocityZ
+      - /avatar/parameters/InStation
+      - /avatar/parameters/0_Angle
+      - /avatar/parameters/VF70_TC_current_trackingEyes
+      - /avatar/parameters/VF70_TC_current_trackingRightFoot
+      - /avatar/parameters/VF70_TC_current_trackingLeftFoot
+      - /avatar/parameters/VF70_TC_current_trackingMouth
+      - /avatar/parameters/VF70_TC_current_trackingRightFingers
+      - /avatar/parameters/VF70_TC_current_trackingLeftFingers
+      - /avatar/parameters/VF70_TC_current_trackingHip
+      - /avatar/parameters/VF70_TC_current_trackingRightHand
+      - /avatar/parameters/VF70_TC_current_trackingLeftHand
+      - /avatar/parameters/VF70_TC_current_trackingHead
+      - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingRightFoot
+      - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingLeftFoot
+      - /avatar/parameters/Go/Crouch
+      - /avatar/parameters/Go/Mirror
+      - /avatar/parameters/VelocityMagnitude
+      - /avatar/parameters/AngularY
+      - /avatar/parameters/Go/Jump
+      - /avatar/parameters/Grounded
+    transmission:  # Messages that won't be transmitted at all
+      - /avatar/parameters/Voice
+      - /monitoring/.*
+      - /avatar/parameters/VFH/.*
+      - /avatar/parameters/VF54_SyncDataNum
+      - /avatar/parameters/VF54_SyncPointer
+      - /avatar/parameters/VelocityX
+      - /avatar/parameters/VelocityY
+      - /avatar/parameters/VelocityZ
+      - /avatar/parameters/InStation
+      - /avatar/parameters/0_Angle
+      - /avatar/parameters/VF70_TC_current_trackingEyes
+      - /avatar/parameters/VF70_TC_current_trackingRightFoot
+      - /avatar/parameters/VF70_TC_current_trackingLeftFoot
+      - /avatar/parameters/VF70_TC_current_trackingMouth
+      - /avatar/parameters/VF70_TC_current_trackingRightFingers
+      - /avatar/parameters/VF70_TC_current_trackingLeftFingers
+      - /avatar/parameters/VF70_TC_current_trackingHip
+      - /avatar/parameters/VF70_TC_current_trackingRightHand
+      - /avatar/parameters/VF70_TC_current_trackingLeftHand
+      - /avatar/parameters/VF70_TC_current_trackingHead
+      - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingRightFoot
+      - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingLeftFoot
+      - /avatar/parameters/Go/Crouch
+      - /avatar/parameters/Go/Mirror
+      - /avatar/parameters/VelocityMagnitude
+      - /avatar/parameters/AngularY
+      - /avatar/parameters/Go/Jump
+      - /avatar/parameters/Grounded
+logging:
+  console: true
+  file: true
+  osc:
+    incoming: true
+    outgoing: true
