--- a/Client-Config.yml
+++ b/Client-Config.yml
@@ -20,10 +20,56 @@ filters:
       - /avatar/parameters/VelocityY
       - /avatar/parameters/VelocityZ
       - /avatar/parameters/InStation
+      - /avatar/parameters/0_Angle
+      - /avatar/parameters/VF70_TC_current_trackingEyes
+      - /avatar/parameters/VF70_TC_current_trackingRightFoot
+      - /avatar/parameters/VF70_TC_current_trackingLeftFoot
+      - /avatar/parameters/VF70_TC_current_trackingMouth
+      - /avatar/parameters/VF70_TC_current_trackingRightFingers
+      - /avatar/parameters/VF70_TC_current_trackingLeftFingers
+      - /avatar/parameters/VF70_TC_current_trackingHip
+      - /avatar/parameters/VF70_TC_current_trackingRightHand
+      - /avatar/parameters/VF70_TC_current_trackingLeftHand
+      - /avatar/parameters/VF70_TC_current_trackingHead
+      - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingRightFoot
+      - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingLeftFoot
+      - /avatar/parameters/Go/Crouch
+      - /avatar/parameters/Go/Mirror
+      - /avatar/parameters/VelocityMagnitude
+      - /avatar/parameters/AngularY
+      - /avatar/parameters/Go/Jump
+      - /avatar/parameters/Grounded
+      - /avatar/parameters/0_Stretch
     transmission:
       - /avatar/parameters/Voice
       - /monitoring/.*
       - /avatar/parameters/VFH/.*
+      - /avatar/parameters/VF54_SyncDataNum
+      - /avatar/parameters/VF54_SyncPointer
+      - /avatar/parameters/VelocityX
+      - /avatar/parameters/VelocityY
+      - /avatar/parameters/VelocityZ
+      - /avatar/parameters/InStation
+      - /avatar/parameters/0_Angle
+      - /avatar/parameters/VF70_TC_current_trackingEyes
+      - /avatar/parameters/VF70_TC_current_trackingRightFoot
+      - /avatar/parameters/VF70_TC_current_trackingLeftFoot
+      - /avatar/parameters/VF70_TC_current_trackingMouth
+      - /avatar/parameters/VF70_TC_current_trackingRightFingers
+      - /avatar/parameters/VF70_TC_current_trackingLeftFingers
+      - /avatar/parameters/VF70_TC_current_trackingHip
+      - /avatar/parameters/VF70_TC_current_trackingRightHand
+      - /avatar/parameters/VF70_TC_current_trackingLeftHand
+      - /avatar/parameters/VF70_TC_current_trackingHead
+      - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingRightFoot
+      - /avatar/parameters/VF70_TC_FullControllerBuilder.Apply_on_GogoLoco_Beyond_(VRCFury)_trackingLeftFoot
+      - /avatar/parameters/Go/Crouch
+      - /avatar/parameters/Go/Mirror
+      - /avatar/parameters/VelocityMagnitude
+      - /avatar/parameters/AngularY
+      - /avatar/parameters/Go/Jump
+      - /avatar/parameters/Grounded
+      - /avatar/parameters/0_Stretch
 logging:
   console: true
   file: true
